Add `run` and `tools` actions